Update index.html 2nd airbnb link

--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
 					<div class="f-hotel">
 						<div class="image" style="background-image: url(images/hotel_feture_3.jpg);">
 							<div class="descrip text-center">
-								<p><small>For as low as</small><span>$99/night</span></p>
+								<p><small>For as low as</small><span>$399/night</span></p>
 							</div>
 						</div>
 						<div class="desc">
 							<h3>Cozy Lake Cabin in Quebec</h3>
-							<p>Pellentesque habitant morbi tristique senectus et netus ett mauada fames ac turpis egestas. Etiam euismod tempor leo, in suscipit urna condimentum sed. </p>
-							<p><a href="#" class="btn btn-primary btn-luxe-primary">Book Now <i class="ti-angle-right"></i></a></p>
+							<p>This cozy Waterfront cottage has everything you need to relax and enjoy the pleasure of a unique get away. It's located on the beautiful quiet lake where guests can enjoy peaceful mornings with a cup of coffee under a warm blanket or enjoy evenings near the outside fireplace at the lake with family and friends.  </p>
+							<p><a href="https://www.airbnb.ca/rooms/39950489?source_impression_id=p3_1689739387_VqgetiG3p6rFDVcS&check_in=2023-08-24&guests=1&adults=1&check_out=2023-08-27" target="_blank" class="btn btn-primary btn-luxe-primary">Book Now <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
 				</div>
