--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 			<div class="row">
 				<div class="col-md-3 text-center">
 					<span class="fh5co-counter js-counter" data-from="0" data-to="4" data-speed="200" data-refresh-interval="1"></span>
-					<span class="fh5co-counter-label">Years of services</span>
+					<span class="fh5co-counter-label">Years Of Service</span>
 				</div>
 				<div class="col-md-3 text-center">
 					<span class="fh5co-counter js-counter" data-from="0" data-to="2" data-speed="200" data-refresh-interval="1"></span>
@@ -173,7 +173,7 @@
 				</div>
 				<div class="col-md-3 text-center">
 					<span class="fh5co-counter js-counter" data-from="0" data-to="4.8" data-speed="200" data-refresh-interval="1"></span>
-					<span class="fh5co-counter-label">Rating &amp; Review</span>
+					<span class="fh5co-counter-label">Star Reviews</span>
 				</div>
 			</div>
 		</div>
@@ -201,8 +201,7 @@
 						</div>
 						<div class="desc">
 							<h3>Downtown montreal modern studio with city view. </h3>
-							<p>Pellentesque habitant morbi tristique senectus et netus ett mauada fames ac turpis egestas. Etiam euismod tempor leo,
-							in suscipit urna condimentum sed. </p>
+							<p>Our high-rise studio apartment boasts a window wall for stunning views and plenty of natural light. With central heating, air conditioning, and in-unit laundry, you'll have all the comforts of home. Located on one of Montreal's most vibrant streets with endless restaurants and shops, you'll be right in the thick of the city's excitement.  </p>
 							<p><a href="https://www.airbnb.ca/rooms/823916677063009871?guests=1&adults=1&s=67&unique_share_id=6318657b-39a8-4d35-a438-5e0436db26d0" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-luxe-primary">Book Now <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
@@ -213,8 +212,8 @@
 							</div>
 						</div>
 						<div class="desc">
-							<h3>Cozy Lake Cabin in Quebec</h3>
-							<p>This cozy Waterfront cottage has everything you need to relax and enjoy the pleasure of a unique get away. It's located on the beautiful quiet lake where guests can enjoy peaceful mornings with a cup of coffee under a warm blanket or enjoy evenings near the outside fireplace at the lake with family and friends.  </p>
+							<h3>Cozy Lake Cottage in Cherstey, Quebec.</h3>
+							<p>Escape to this charming Waterfront cottage, where tranquility and comfort await you. Nestled on the serene shores of a picturesque lake, this hidden gem offers everything you need for a truly rejuvenating getaway. Immerse yourself in peaceful mornings, savoring the gentle embrace of a cozy blanket while sipping on a freshly brewed cup of coffee.  </p>
 							<p><a href="https://www.airbnb.ca/rooms/39950489?source_impression_id=p3_1689739387_VqgetiG3p6rFDVcS&check_in=2023-08-24&guests=1&adults=1&check_out=2023-08-27" target="_blank" class="btn btn-primary btn-luxe-primary">Book Now <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
