changed websiite link

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Luxe &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>LYV Luxury &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -81,7 +81,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Luxe</a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">LYV Luxury</a></h1>
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li><a href="index.html">Home</a></li>
@@ -118,9 +118,9 @@
           <h2>Get in Touch</h2>
           <p>Contact Information</p>
 					<ul class="contact-info">
-						<li><i class="ti-mobile"></i>+1 5146591133</li>
-						<li><i class="ti-envelope"></i><a href="#">hamelyac@gmail.com</a></li>
-						<li><i class="ti-home"></i><a href="#">www.yoursite.com</a></li>
+						<li><i class="ti-mobile"></i>+1 (514) 583-3153</li>
+						<li><i class="ti-envelope"></i><a href="#">info@solutionconcierge.ca</a></li>
+						<!-- <li><i class="ti-home"></i><a href="#">www.yoursite.com</a></li> -->
 					</ul>
 				</div>
 				<div class="col-md-12">
