--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Luxe &mdash;</title>
+	<title>LYV Luxury &mdash;</title>
 
 
 
@@ -72,13 +72,12 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Luxe</a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">LYV Luxury</a></h1>
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li><a class="active" href="index.html">Home</a></li>
 
 							<li><a href="services.html">Services</a></li>
-							<!-- <li><a href="blog.html">Blog</a></li> -->
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
@@ -269,7 +268,6 @@
 	<footer id="footer" class="fh5co-bg-color">
 		<div class="container">
 			<div class="row">
-
 				<div class="col-md-6">
 					<div class="row">
 						<div class="col-md-3">
@@ -279,11 +277,8 @@
 								<li><a href="contact.html">Contact Us</a></li>
 							</ul>
 						</div>
-
-
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</footer>
