adding manila unit an editing color

--- a/index.html
+++ b/index.html
@@ -90,6 +90,54 @@
 	<aside id="fh5co-hero" class="js-fullheight">
 		<div class="flexslider js-fullheight">
 			<ul class="slides">
+        <li style="background-image: url(images/slider4.jpg);">
+          <div class="overlay-gradient"></div>
+          <div class="container">
+            <div class="col-md-12 col-md-offset-0 text-center slider-text">
+              <div class="slider-text-inner js-fullheight">
+                <div class="desc">
+                  <p><span>Makati</span></p>
+                  <h2>Minimal Luxury</h2>
+                  <p>
+                    <a href="#" class="btn btn-primary btn-lg">Book Now</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li style="background-image: url(images/slider5.jpg);">
+          <div class="overlay-gradient"></div>
+          <div class="container">
+            <div class="col-md-12 col-md-offset-0 text-center slider-text">
+              <div class="slider-text-inner js-fullheight">
+                <div class="desc">
+                  <p><span>Makati</span></p>
+                  <h2>Unmatched Comfort</h2>
+                  <p>
+                    <a href="#" class="btn btn-primary btn-lg">Book Now</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li style="background-image: url(images/slider6.jpg);">
+          <div class="overlay-gradient"></div>
+          <div class="container">
+            <div class="col-md-12 col-md-offset-0 text-center slider-text">
+              <div class="slider-text-inner js-fullheight">
+                <div class="desc">
+                  <p><span>Makati</span></p>
+                  <h2>Infinity Pool, Netflix & Gym</h2>
+                  <p>
+                    <a href="#" class="btn btn-primary btn-lg">Book Now</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
 		   	<li style="background-image: url(images/slider1.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
@@ -138,6 +186,7 @@
 		   			</div>
 		   		</div>
 		   	</li>
+
 
 		  	</ul>
 	  	</div>
@@ -195,7 +244,7 @@
 					<div class="f-hotel">
 						<div class="image" style="background-image: url(images/hotel_feture_2.jpg);">
 							<div class="descrip text-center">
-								<p><small>For as low as</small><span>$150/night</span></p>
+								<p><small>For as low as</small><span>$250/night</span></p>
 							</div>
 						</div>
 						<div class="desc">
@@ -204,6 +253,22 @@
 							<p><a href="https://www.airbnb.ca/rooms/823916677063009871?guests=1&adults=1&s=67&unique_share_id=6318657b-39a8-4d35-a438-5e0436db26d0" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-luxe-primary">Book Now <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
+					<div class="f-hotel">
+						<div class="image" style="background-image: url(images/hotel_feture_1.jpg);">
+							<div class="descrip text-center">
+								<p><small>For as low as</small><span>$150/night</span></p>
+							</div>
+						</div>
+						<div class="desc">
+							<h3>Loft in Makati: Infinity Pool, Netflix & Gym.</h3>
+							<p>Elite Makati Loft: Serene, secure, and sumptuously appointed, this white penthouse features a stunning infinity pool and a gym. With round-the-clock security and concierge, indulge in a luxurious haven above Makati.  </p>
+							<p><a href="https://www.airbnb.ca/rooms/1035474265815944185?preview_for_ml=true&source_impression_id=p3_1711308640_uiN%2Fo1BkyhNlQ1Ir" target="_blank" class="btn btn-primary btn-luxe-primary">Book Now <i class="ti-angle-right"></i></a></p>
+						</div>
+					</div>
+				</div>
+
+        <div class="feature-full-2col">
+
 					<div class="f-hotel">
 						<div class="image" style="background-image: url(images/hotel_feture_3.jpg);">
 							<div class="descrip text-center">
