adding manila unit an editing color

--- a/index.html
+++ b/index.html
@@ -242,18 +242,6 @@
 
 				<div class="feature-full-2col">
 					<div class="f-hotel">
-						<div class="image" style="background-image: url(images/hotel_feture_2.jpg);">
-							<div class="descrip text-center">
-								<p><small>For as low as</small><span>$250/night</span></p>
-							</div>
-						</div>
-						<div class="desc">
-							<h3>Downtown montreal modern studio with city view. </h3>
-							<p>Our high-rise studio apartment boasts a window wall for stunning views and plenty of natural light. With central heating, air conditioning, and in-unit laundry, you'll have all the comforts of home. Located on one of Montreal's most vibrant streets with endless restaurants and shops, you'll be right in the thick of the city's excitement.  </p>
-							<p><a href="https://www.airbnb.ca/rooms/823916677063009871?guests=1&adults=1&s=67&unique_share_id=6318657b-39a8-4d35-a438-5e0436db26d0" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-luxe-primary">Book Now <i class="ti-angle-right"></i></a></p>
-						</div>
-					</div>
-					<div class="f-hotel">
 						<div class="image" style="background-image: url(images/hotel_feture_1.jpg);">
 							<div class="descrip text-center">
 								<p><small>For as low as</small><span>$150/night</span></p>
@@ -266,6 +254,22 @@
 						</div>
 					</div>
 				</div>
+
+        <div class="feature-full-2col">
+					<div class="f-hotel">
+						<div class="image" style="background-image: url(images/hotel_feture_2.jpg);">
+							<div class="descrip text-center">
+								<p><small>For as low as</small><span>$250/night</span></p>
+							</div>
+						</div>
+						<div class="desc">
+							<h3>Downtown montreal modern studio with city view. </h3>
+							<p>Our high-rise studio apartment boasts a window wall for stunning views and plenty of natural light. With central heating, air conditioning, and in-unit laundry, you'll have all the comforts of home. Located on one of Montreal's most vibrant streets with endless restaurants and shops, you'll be right in the thick of the city's excitement.  </p>
+							<p><a href="https://www.airbnb.ca/rooms/823916677063009871?guests=1&adults=1&s=67&unique_share_id=6318657b-39a8-4d35-a438-5e0436db26d0" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-luxe-primary">Book Now <i class="ti-angle-right"></i></a></p>
+						</div>
+					</div>
+				</div>
+
 
         <div class="feature-full-2col">
 
